--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "hardhat": "^2.17.2"
+  },
+  "dependencies": {
+    "create-react-app": "^5.0.1"
   }
 }
